--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg-sprite-loader",
-  "version": "5.0.0",
+  "version": "4.1.6",
   "description": "Webpack loader for creating SVG sprites",
   "keywords": [
     "svg",
@@ -13,11 +13,11 @@
     "webpack loader",
     "webpack plugin"
   ],
-  "homepage": "https://github.com/JetBrains/svg-sprite-loader#readme",
-  "bugs": "https://github.com/JetBrains/svg-sprite-loader/issues",
+  "homepage": "https://github.com/kisenka/svg-sprite-loader#readme",
+  "bugs": "https://github.com/kisenka/svg-sprite-loader/issues",
   "license": "MIT",
   "author": "kisenka",
-  "repository": "JetBrains/svg-sprite-loader",
+  "repository": "kisenka/svg-sprite-loader",
   "main": "lib/loader.js",
   "files": [
     "examples/**",
@@ -37,8 +37,8 @@
     "escape-string-regexp": "1.0.5",
     "html-webpack-plugin": "^3.2.0",
     "loader-utils": "^1.1.0",
-    "svg-baker": "^1.5.0",
-    "svg-baker-runtime": "^1.4.7",
+    "svg-baker": "^1.4.1",
+    "svg-baker-runtime": "1.4.1",
     "url-slug": "2.0.0"
   },
   "devDependencies": {
@@ -48,14 +48,15 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "6.24.1",
     "chai": "^3.5.0",
-    "ci-publish": "^1.3.1",
+    "ci-publish": "^1.3.0",
     "codeclimate-test-reporter": "0.4.1",
     "commitizen": "2.9.6",
     "css-loader": "^0.28.0",
     "cz-customizable": "^5.0.0",
-    "eslint": "^7.0.0",
+    "eslint": "^3.18.0",
     "eslint-config-airbnb-base": "^11.1.2",
     "eslint-plugin-import": "^2.2.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "glob": "7.1.1",
     "html-loader": "^0.5.5",
@@ -63,7 +64,7 @@
     "istanbul": "^0.4.5",
     "memory-fs": "^0.4.1",
     "minimist": "^1.2.0",
-    "mocha": "^7.0.0",
+    "mocha": "^3.2.0",
     "nyc": "^10.3.2",
     "pascal-case": "2.0.1",
     "react": "15.5.4",
@@ -77,8 +78,9 @@
     "svgo": "^0.7.2",
     "svgo-loader": "^1.2.1",
     "validate-commit-msg": "^2.12.1",
-    "wallaby-webpack": "^3.9.15",
-    "webpack-cli": "^3.3.10",
+    "wallaby-webpack": "0.0.38",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^2.1.5",
     "webpack-toolkit": "^1.0.0"
   },
   "config": {
@@ -103,10 +105,11 @@
     "release": "yarn build:examples && git add examples && standard-version -a && git push --follow-tags origin master",
     "release:dry-run": "standard-version --no-verify",
     "test": "mocha test/*.test.js",
-    "test:all": "yarn test:webpack-2 && yarn test:webpack-3 && yarn test:webpack-4",
+    "test:all": "yarn test:webpack-2 && yarn test:webpack-3 && yarn test:webpack-4 && yarn test:webpack-5",
     "test:webpack-2": "yarn env webpack-2 && yarn test",
     "test:webpack-3": "yarn env webpack-3 && yarn test",
     "test:webpack-4": "yarn env webpack-4 && yarn test",
+    "test:webpack-5": "yarn env webpack-5 && yarn test",
     "upload-coverage": "codeclimate-test-reporter < coverage/lcov.info"
   }
 }
